--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Example</h1>
         <div class="output"></div>
-        <script type="text/x-python" snakecharmer-classname="main" snakecharmer-outputtarget="stdio">
+        <script type="text/x-python" snakecharmer-classname="main" snakecharmer-outputtarget=".output">
             getal = 1
 
             print("Ik kan tot vijf tellen!")
