--- a/example.html
+++ b/example.html
@@ -16,5 +16,20 @@
                 print(getal)
                 getal += 1
         </script>
+
+
+
+        <script type="text/x-python" snakecharmer-classname="main2" snakecharmer-outputtarget=".output">
+            n = int(input('Type a number, and its factorial will be printed: '))
+
+            if n < 0:
+                raise ValueError('You must enter a non-negative integer')
+
+            factorial = 1
+            for i in range(2, n + 1):
+                factorial *= i
+
+            print(factorial)
+        </script>
     </body>
 </html>
